fixing spacing

--- a/styles/InventoryPage.css
+++ b/styles/InventoryPage.css
@@ -2,27 +2,35 @@ html, body, #root, .container {
 	height: 100%;
 }
 
-
 .container {
 	margin-left: auto;
 	margin-right: auto;
 	background-image: url("http://wallpapercave.com/wp/QiPDH11.jpg");
-	
-
+	background-position-y: 122px;
 }
 
-.Navbar {
-	background: #111;
-	height: 150px;
-	width:100%;
+.Nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  height: 115px;
+  background-color: #111111;
 }
 
-.Body {
+.Team-Nav {
+	order:1;
+	flex-grow: 2;
 }
-
-
-
-
+.Title {
+  color: orange;
+  font-size: 72px;
+  width: 18%;
+  flex-grow:2;
+  order:2;
+  padding-right: 118px;
+  text-shadow: 5px 2px 3px brown;
+}
 
 .CustomTeamMenu {
 	background: #111;
@@ -33,3 +41,20 @@ html, body, #root, .container {
 	color:white;
 }
 
+.BottomBar {
+  position: absolute;
+  width: 100%;
+  height: 112px;
+  background-color: #111;
+  top: 999px;
+  display: flex;
+  flex-direction: row;
+  box-shadow: 0px 500px 0px 500px #111;
+  justify-content: center;
+}
+
+.userName {
+  color: orange;
+  font-size: 30px;
+  text-shadow: 4px 4px 6px brown;
+}
